# MPICXX

./: .codedocs  .codedocs.in  .gitignore  .install_gcc_9.2.0.sh  .install_mpich_travis.sh  .install_openmpi_travis.sh  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  _formulas.tex  annotated.html  argv_8cpp.html  argvs_2getter_8cpp.html  argvs_2initializer__list_8cpp.html  argvs_2iterator__range_8cpp.html  argvs_2parameter__pack_8cpp.html  array__subscript__operator_8cpp.html  assert_8cpp.html  assert_8hpp.html  assert_8hpp_source.html  assignment_8cpp.html  at_8cpp.html  classes.html  classmpicxx_1_1detail_1_1source__location-members.html  classmpicxx_1_1detail_1_1source__location.html  classmpicxx_1_1exception-members.html  classmpicxx_1_1exception.html  classmpicxx_1_1info-members.html  classmpicxx_1_1info.html  classmpicxx_1_1info_1_1iterator__impl-members.html  classmpicxx_1_1info_1_1iterator__impl.html  classmpicxx_1_1info_1_1iterator__impl_1_1pointer__impl-members.html  classmpicxx_1_1info_1_1iterator__impl_1_1pointer__impl.html  classmpicxx_1_1info_1_1proxy-members.html  classmpicxx_1_1info_1_1proxy.html  classmpicxx_1_1multiple__spawner-members.html  classmpicxx_1_1multiple__spawner.html  classmpicxx_1_1single__spawner-members.html  classmpicxx_1_1single__spawner.html  (+220 more)
.github/disabled-workflows/: build_and_test_gcc.yml
.github/workflows/: build_and_test.yml  build_and_test_clang.yml  build_and_test_gcc.yml  documentation.yaml
cmake/: GoogleTest.cmake  mpicxxConfig.cmake.in
cmake/modules/: FindDoxyrest.cmake  FindSphinx.cmake  GoogleTest.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  custom_style.css  doxyrest-config.lua  main_page.md
doc/dirs/: dirs.dox
doc/dirs/include/: chrono.dox  detail.dox  dirs.dox  exception.dox  info.dox  startup.dox  version.dox
doc/dirs/test/: chrono.dox  detail.dox  dirs.dox  exception.dox  info.dox  startup.dox  utility.dox  version.dox
doc/html_style/: append_to_file.cmake  copy_readme.cmake  customdoxygen.css  customsearch.js  doxy-boot.js  footer.html  header.html  stylesheet.css
doc/resources/: copy_readme.cmake  customdoxygen.css  customsearch.js  doxy-boot.js  footer.html  header.html  main_page.md
examples/info/: info.cpp  (+2 more)
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  customdoxygen.css  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+51 more)
test/: CMakeLists.txt  gtest-mpi-listener.hpp  hello_world_test.cpp  main.cpp  test_utility.hpp
test/chrono/: CMakeLists.txt  clock.cpp
test/detail/: CMakeLists.txt  assert.cpp  bitmask.cpp  bitwise_operators.cpp  source_location.cpp
test/error/: CMakeLists.txt  error.cpp  error_category.cpp  error_code.cpp  error_handler.cpp
test/exception/: CMakeLists.txt  exception.cpp  thread_support_exception.cpp
test/info/: CMakeLists.txt  dirs.dox  env.cpp  info_access_test.cpp  info_additional_functions_test.cpp  info_assignment_test.cpp  info_capacity_test.cpp  info_construction_test.cpp  info_env_test.cpp  info_iterator_test.cpp  info_lookup_test.cpp  info_modifier_test.cpp  info_non-member_functions_test.cpp  info_relational_test.cpp  info_test.cpp  null.cpp  proxy.cpp
test/info/additional_functions/: keys.cpp  max_key_size.cpp  max_value_size.cpp  values.cpp
test/info/assignment/: copy_assignment.cpp  initializer_list_assignment.cpp  move_assignment.cpp
test/info/capacity/: empty.cpp  max_size.cpp  size.cpp
test/info/construction_and_destruction/: copy_construction.cpp  default_construction.cpp  initializer_list_construction.cpp  iterator_range_construction.cpp  move_construction.cpp  mpi_info_construction.cpp
test/info/constructor_and_destructor/: copy_constructor.cpp  default_constructor.cpp  initializer_list_constructor.cpp  iterator_range_constructor.cpp  move_constructor.cpp  mpi_info_constructor.cpp  parameter_pack_constructor.cpp
test/info/iterators/: const_iterator.cpp  const_reverse_iterator.cpp  iterator.cpp  reverse_iterator.cpp
test/info/iterators/iterator_impl/: assignment.cpp  constructor.cpp  dereference.cpp  distance.cpp  modifier.cpp  relational.cpp
test/info/lookup/: contains.cpp  count.cpp  equal_range.cpp  find.cpp
test/info/modifier/: array_subscript_operator.cpp  at.cpp  clear.cpp  erase.cpp  extract.cpp  insert.cpp  insert_or_assign.cpp  merge.cpp  operator[].cpp  swap.cpp
test/info/non-member_functions/: equality.cpp  erase_if.cpp  inequality.cpp  swap.cpp
test/reduce/: CMakeLists.txt  reduce_test.cpp
test/send/: CMakeLists.txt  isend_test.cpp  send_test.cpp
test/startup/: CMakeLists.txt  finalize.cpp  initialize.cpp  multi_spawner.cpp  single_spawner.cpp  spawn.cpp  spawner.cpp  thread_support.cpp
test/startup/multiple_spawner/: communicator.cpp  constructor.cpp  root.cpp  sizes.cpp
test/startup/multiple_spawner/argvs/: getter.cpp  initializer_list.cpp  iterator_range.cpp  parameter_pack.cpp  remove.cpp
test/startup/multiple_spawner/command/: getter.cpp  initializer_list.cpp  iterator_range.cpp  ith.cpp  parameter_pack.cpp
test/startup/multiple_spawner/constructor/: initializer_list_constructor.cpp  iterator_range_constructor.cpp  parameter_pack_constructor.cpp  spawner_constructor.cpp
test/startup/multiple_spawner/maxprocs/: getter.cpp  initializer_list.cpp  iterator_range.cpp  ith.cpp  parameter_pack.cpp
test/startup/multiple_spawner/spawn_info/: getter.cpp  initializer_list.cpp  iterator_range.cpp  ith.cpp  parameter_pack.cpp
test/startup/single_spawner/: argv.cpp  command.cpp  communicator.cpp  constructor.cpp  lookup_after_process_spawning.cpp  maxprocs.cpp  root.cpp  spawn_info.cpp  universe_size.cpp
test/utility/: CMakeLists.txt  assert_test.cpp  source_location_test.cpp
test/version/: CMakeLists.txt  version.cpp
(+50 files in other folders)
